--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ pyserial = "*"
 
 [dev-packages]
 flake8 = "*"
+black = "*"
 
 [requires]
 python_version = "3.9"
+
+[pipenv]
+allow_prereleases = true
